--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Image::XBin.
 
+0.03  Mon Dec 06 16:29:32 2004
+	- major rewrite to the old objects plus...
+	- Image::XBin::Parser now handles all reading functions
+	- Image::XBin::Util holds create_io_object() for reading and
+	  writing
+	- Image::XBin::Pixel is used in place of an array ref
+
 0.02  Sun Aug 24 12:05:30 2003
 	- Fixed Makefile.PL (NAME and PREREQ_PM)
 
