--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Image::XBin.
 
+0.05  Tue Mar 29 2005
+	- using Build.PL now
+	- added pod_coverage.t
+
 0.04  Thu Dec 09 10:17:20 2004
 	- wrote some tests
 	- added default font and palette
